--- a/.poggit.yml
+++ b/.poggit.yml
@@ -1,8 +1,8 @@
 --- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/yolfry/blockdevice
 build-by-default: true
 branches:
-- main
+  - main
 projects:
   blockdevice:
     path: ""
-...
+    icon: assets/icon.png
